--- a/C.vcxproj.filters
+++ b/C.vcxproj.filters
@@ -15,8 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="字符串插入.cpp">
-      <Filter>资源文件</Filter>
+    <ClCompile Include="0011.cpp">
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
